@@ -41,13 +41,12 @@ import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderSeatBid;
 import org.prebid.server.bidder.model.BidderSeatBidInfo;
-import org.prebid.server.cache.CacheService;
+import org.prebid.server.cache.CoreCacheService;
 import org.prebid.server.cache.model.CacheContext;
 import org.prebid.server.cache.model.CacheInfo;
 import org.prebid.server.cache.model.CacheServiceResult;
+import org.prebid.server.cache.model.CacheTtl;
 import org.prebid.server.cache.model.DebugHttpCall;
-import org.prebid.server.deals.model.DeepDebugLog;
-import org.prebid.server.deals.model.TxnLog;
 import org.prebid.server.events.EventsContext;
 import org.prebid.server.events.EventsService;
 import org.prebid.server.exception.InvalidRequestException;
@@ -61,7 +60,6 @@ import org.prebid.server.identity.IdGenerator;
 import org.prebid.server.identity.IdGeneratorType;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
-import org.prebid.server.proto.openrtb.ext.request.ExtDealLine;
 import org.prebid.server.proto.openrtb.ext.request.ExtImp;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpAuctionEnvironment;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebid;
@@ -81,12 +79,11 @@ import org.prebid.server.proto.openrtb.ext.response.ExtBidResponse;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidResponseFledge;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidResponsePrebid;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidderError;
-import org.prebid.server.proto.openrtb.ext.response.ExtDebugPgmetrics;
 import org.prebid.server.proto.openrtb.ext.response.ExtDebugTrace;
 import org.prebid.server.proto.openrtb.ext.response.ExtHttpCall;
 import org.prebid.server.proto.openrtb.ext.response.ExtResponseCache;
 import org.prebid.server.proto.openrtb.ext.response.ExtResponseDebug;
-import org.prebid.server.proto.openrtb.ext.response.ExtTraceDeal;
+import org.prebid.server.proto.openrtb.ext.response.ExtTraceActivityInfrastructure;
 import org.prebid.server.proto.openrtb.ext.response.FledgeAuctionConfig;
 import org.prebid.server.proto.openrtb.ext.response.seatnonbid.NonBid;
 import org.prebid.server.proto.openrtb.ext.response.seatnonbid.SeatNonBid;
@@ -95,8 +92,8 @@ import org.prebid.server.settings.model.AccountAnalyticsConfig;
 import org.prebid.server.settings.model.AccountAuctionConfig;
 import org.prebid.server.settings.model.AccountAuctionEventConfig;
 import org.prebid.server.settings.model.AccountEventsConfig;
+import org.prebid.server.settings.model.AccountTargetingConfig;
 import org.prebid.server.settings.model.VideoStoredDataResult;
-import org.prebid.server.util.LineItemUtil;
 import org.prebid.server.util.StreamUtil;
 import org.prebid.server.vast.VastModifier;
 
@@ -122,8 +119,11 @@ public class BidResponseCreator {
     private static final String CACHE = "cache";
     private static final String PREBID_EXT = "prebid";
     private static final Integer DEFAULT_BID_LIMIT_MIN = 1;
+    private static final Integer MAX_TARGETING_KEY_LENGTH = 11;
+    private static final String DEFAULT_TARGETING_KEY_PREFIX = "hb";
+    public static final String DEFAULT_DEBUG_KEY = "prebid";
 
-    private final CacheService cacheService;
+    private final CoreCacheService coreCacheService;
     private final BidderCatalog bidderCatalog;
     private final VastModifier vastModifier;
     private final EventsService eventsService;
@@ -135,12 +135,13 @@ public class BidResponseCreator {
     private final int truncateAttrChars;
     private final Clock clock;
     private final JacksonMapper mapper;
+    private final CacheTtl mediaTypeCacheTtl;
 
     private final String cacheHost;
     private final String cachePath;
     private final String cacheAssetUrlTemplate;
 
-    public BidResponseCreator(CacheService cacheService,
+    public BidResponseCreator(CoreCacheService coreCacheService,
                               BidderCatalog bidderCatalog,
                               VastModifier vastModifier,
                               EventsService eventsService,
@@ -151,9 +152,10 @@ public class BidResponseCreator {
                               CategoryMappingService categoryMappingService,
                               int truncateAttrChars,
                               Clock clock,
-                              JacksonMapper mapper) {
+                              JacksonMapper mapper,
+                              CacheTtl mediaTypeCacheTtl) {
 
-        this.cacheService = Objects.requireNonNull(cacheService);
+        this.coreCacheService = Objects.requireNonNull(coreCacheService);
         this.bidderCatalog = Objects.requireNonNull(bidderCatalog);
         this.vastModifier = Objects.requireNonNull(vastModifier);
         this.eventsService = Objects.requireNonNull(eventsService);
@@ -165,10 +167,11 @@ public class BidResponseCreator {
         this.truncateAttrChars = validateTruncateAttrChars(truncateAttrChars);
         this.clock = Objects.requireNonNull(clock);
         this.mapper = Objects.requireNonNull(mapper);
+        this.mediaTypeCacheTtl = Objects.requireNonNull(mediaTypeCacheTtl);
 
-        cacheHost = Objects.requireNonNull(cacheService.getEndpointHost());
-        cachePath = Objects.requireNonNull(cacheService.getEndpointPath());
-        cacheAssetUrlTemplate = Objects.requireNonNull(cacheService.getCachedAssetURLTemplate());
+        cacheHost = Objects.requireNonNull(coreCacheService.getEndpointHost());
+        cachePath = Objects.requireNonNull(coreCacheService.getEndpointPath());
+        cacheAssetUrlTemplate = Objects.requireNonNull(coreCacheService.getCachedAssetURLTemplate());
     }
 
     private static int validateTruncateAttrChars(int truncateAttrChars) {
@@ -186,42 +189,40 @@ public class BidResponseCreator {
                                BidRequestCacheInfo cacheInfo,
                                Map<String, MultiBidConfig> bidderToMultiBids) {
 
-        final List<AuctionParticipation> auctionParticipations = auctionContext.getAuctionParticipations();
-        final List<Imp> imps = auctionContext.getBidRequest().getImp();
+        return videoStoredDataResult(auctionContext)
+                .compose(videoStoredData -> create(videoStoredData, auctionContext, cacheInfo, bidderToMultiBids))
+                .map(bidResponse -> populateSeatNonBid(auctionContext, bidResponse));
+    }
+
+    private Future<BidResponse> create(VideoStoredDataResult videoStoredDataResult,
+                                       AuctionContext auctionContext,
+                                       BidRequestCacheInfo cacheInfo,
+                                       Map<String, MultiBidConfig> bidderToMultiBids) {
+
         final EventsContext eventsContext = createEventsContext(auctionContext);
 
-        final List<BidderResponse> bidderResponses = auctionParticipations.stream()
+        final List<BidderResponse> bidderResponses = auctionContext.getAuctionParticipations().stream()
                 .filter(auctionParticipation -> !auctionParticipation.isRequestBlocked())
                 .map(AuctionParticipation::getBidderResponse)
                 .toList();
 
-        return videoStoredDataResult(auctionContext).compose(videoStoredDataResult ->
-                invokeProcessedBidderResponseHooks(
-                        updateBids(bidderResponses, videoStoredDataResult, auctionContext, eventsContext, imps),
-                        auctionContext)
-
-                        .compose(updatedResponses ->
-                                invokeAllProcessedBidResponsesHook(updatedResponses, auctionContext))
-
-                        .compose(updatedResponses ->
-                                createCategoryMapping(auctionContext, updatedResponses))
-
-                        .compose(categoryMappingResult -> cacheBidsAndCreateResponse(
-                                toBidderResponseInfos(categoryMappingResult, imps),
-                                auctionContext,
-                                cacheInfo,
-                                bidderToMultiBids,
-                                videoStoredDataResult,
-                                eventsContext))
-
-                        .map(bidResponse -> populateSeatNonBid(auctionContext, bidResponse)));
+        return updateBids(bidderResponses, videoStoredDataResult, auctionContext, eventsContext)
+                .compose(updatedResponses -> invokeProcessedBidderResponseHooks(updatedResponses, auctionContext))
+                .compose(updatedResponses -> invokeAllProcessedBidResponsesHook(updatedResponses, auctionContext))
+                .compose(updatedResponses -> createCategoryMapping(auctionContext, updatedResponses))
+                .compose(categoryMappingResult -> cacheBidsAndCreateResponse(
+                        toBidderResponseInfos(categoryMappingResult, cacheInfo, auctionContext),
+                        auctionContext,
+                        cacheInfo,
+                        bidderToMultiBids,
+                        videoStoredDataResult,
+                        eventsContext));
     }
 
-    private List<BidderResponse> updateBids(List<BidderResponse> bidderResponses,
-                                            VideoStoredDataResult videoStoredDataResult,
-                                            AuctionContext auctionContext,
-                                            EventsContext eventsContext,
-                                            List<Imp> imps) {
+    private Future<List<BidderResponse>> updateBids(List<BidderResponse> bidderResponses,
+                                                    VideoStoredDataResult videoStoredDataResult,
+                                                    AuctionContext auctionContext,
+                                                    EventsContext eventsContext) {
 
         final List<BidderResponse> result = new ArrayList<>();
 
@@ -234,12 +235,8 @@ public class BidResponseCreator {
                 final Bid receivedBid = bidderBid.getBid();
                 final BidType bidType = bidderBid.getType();
 
-                final Imp correspondingImp = correspondingImp(receivedBid, imps);
-                final ExtDealLine extDealLine = LineItemUtil.extDealLineFrom(receivedBid, correspondingImp, mapper);
-                final String lineItemId = extDealLine != null ? extDealLine.getLineItemId() : null;
-
                 final Bid updatedBid = updateBid(
-                        receivedBid, bidType, bidder, videoStoredDataResult, auctionContext, eventsContext, lineItemId);
+                        receivedBid, bidType, bidder, videoStoredDataResult, auctionContext, eventsContext);
                 modifiedBidderBids.add(bidderBid.toBuilder().bid(updatedBid).build());
             }
 
@@ -247,7 +244,7 @@ public class BidResponseCreator {
             result.add(bidderResponse.with(modifiedSeatBid));
         }
 
-        return result;
+        return Future.succeededFuture(result);
     }
 
     private Bid updateBid(Bid bid,
@@ -255,8 +252,7 @@ public class BidResponseCreator {
                           String bidder,
                           VideoStoredDataResult videoStoredDataResult,
                           AuctionContext auctionContext,
-                          EventsContext eventsContext,
-                          String lineItemId) {
+                          EventsContext eventsContext) {
 
         final Account account = auctionContext.getAccount();
         final List<String> debugWarnings = auctionContext.getDebugWarnings();
@@ -273,8 +269,7 @@ public class BidResponseCreator {
                         account,
                         eventsContext,
                         effectiveBidId,
-                        debugWarnings,
-                        lineItemId))
+                        debugWarnings))
                 .ext(updateBidExt(
                         bid,
                         bidType,
@@ -283,8 +278,7 @@ public class BidResponseCreator {
                         videoStoredDataResult,
                         eventsContext,
                         generatedBidId,
-                        effectiveBidId,
-                        lineItemId))
+                        effectiveBidId))
                 .build();
     }
 
@@ -294,8 +288,7 @@ public class BidResponseCreator {
                                 Account account,
                                 EventsContext eventsContext,
                                 String effectiveBidId,
-                                List<String> debugWarnings,
-                                String lineItemId) {
+                                List<String> debugWarnings) {
 
         final String bidAdm = bid.getAdm();
         return BidType.video.equals(bidType)
@@ -306,8 +299,7 @@ public class BidResponseCreator {
                 effectiveBidId,
                 account.getId(),
                 eventsContext,
-                debugWarnings,
-                lineItemId)
+                debugWarnings)
                 : bidAdm;
     }
 
@@ -318,8 +310,7 @@ public class BidResponseCreator {
                                     VideoStoredDataResult videoStoredDataResult,
                                     EventsContext eventsContext,
                                     String generatedBidId,
-                                    String effectiveBidId,
-                                    String lineItemId) {
+                                    String effectiveBidId) {
 
         final ExtBidPrebid updatedExtBidPrebid = updateBidExtPrebid(
                 bid,
@@ -329,8 +320,7 @@ public class BidResponseCreator {
                 videoStoredDataResult,
                 eventsContext,
                 generatedBidId,
-                effectiveBidId,
-                lineItemId);
+                effectiveBidId);
         final ObjectNode existingBidExt = bid.getExt();
 
         final ObjectNode updatedBidExt = mapper.mapper().createObjectNode();
@@ -351,11 +341,10 @@ public class BidResponseCreator {
                                             VideoStoredDataResult videoStoredDataResult,
                                             EventsContext eventsContext,
                                             String generatedBidId,
-                                            String effectiveBidId,
-                                            String lineItemId) {
+                                            String effectiveBidId) {
 
         final Video storedVideo = videoStoredDataResult.getImpIdToStoredVideo().get(bid.getImpid());
-        final Events events = createEvents(bidder, account, effectiveBidId, eventsContext, lineItemId);
+        final Events events = createEvents(bidder, account, effectiveBidId, eventsContext);
         final ExtBidPrebidVideo extBidPrebidVideo = getExtBidPrebidVideo(bid.getExt()).orElse(null);
 
         final ExtBidPrebid.ExtBidPrebidBuilder extBidPrebidBuilder = getExtPrebid(bid.getExt(), ExtBidPrebid.class)
@@ -381,8 +370,11 @@ public class BidResponseCreator {
     }
 
     private List<BidderResponseInfo> toBidderResponseInfos(CategoryMappingResult categoryMappingResult,
-                                                           List<Imp> imps) {
+                                                           BidRequestCacheInfo cacheInfo,
+                                                           AuctionContext auctionContext) {
 
+        final List<Imp> imps = auctionContext.getBidRequest().getImp();
+        final Account account = auctionContext.getAccount();
         final List<BidderResponseInfo> result = new ArrayList<>();
 
         final List<BidderResponse> bidderResponses = categoryMappingResult.getBidderResponses();
@@ -395,7 +387,7 @@ public class BidResponseCreator {
             for (final BidderBid bidderBid : seatBid.getBids()) {
                 final Bid bid = bidderBid.getBid();
                 final BidType type = bidderBid.getType();
-                final BidInfo bidInfo = toBidInfo(bid, type, imps, bidder, categoryMappingResult);
+                final BidInfo bidInfo = toBidInfo(bid, type, imps, bidder, categoryMappingResult, cacheInfo, account);
                 bidInfos.add(bidInfo);
             }
 
@@ -416,18 +408,18 @@ public class BidResponseCreator {
                               BidType type,
                               List<Imp> imps,
                               String bidder,
-                              CategoryMappingResult categoryMappingResult) {
+                              CategoryMappingResult categoryMappingResult,
+                              BidRequestCacheInfo cacheInfo,
+                              Account account) {
 
         final Imp correspondingImp = correspondingImp(bid, imps);
-        final ExtDealLine extDealLine = LineItemUtil.extDealLineFrom(bid, correspondingImp, mapper);
-        final String lineItemId = extDealLine != null ? extDealLine.getLineItemId() : null;
-
         return BidInfo.builder()
                 .bid(bid)
                 .bidType(type)
                 .bidder(bidder)
                 .correspondingImp(correspondingImp)
-                .lineItemId(lineItemId)
+                .ttl(resolveBannerTtl(bid, correspondingImp, cacheInfo, account))
+                .videoTtl(type == BidType.video ? resolveVideoTtl(bid, correspondingImp, cacheInfo, account) : null)
                 .category(categoryMappingResult.getCategory(bid))
                 .satisfiedPriority(categoryMappingResult.isBidSatisfiesPriority(bid))
                 .build();
@@ -445,6 +437,33 @@ public class BidResponseCreator {
         return imps.stream()
                 .filter(imp -> Objects.equals(impId, imp.getId()))
                 .findFirst();
+    }
+
+    private Integer resolveBannerTtl(Bid bid, Imp imp, BidRequestCacheInfo cacheInfo, Account account) {
+        final AccountAuctionConfig accountAuctionConfig = account.getAuction();
+        final Integer bidTtl = bid.getExp();
+        final Integer impTtl = imp != null ? imp.getExp() : null;
+
+        return ObjectUtils.firstNonNull(
+                bidTtl,
+                impTtl,
+                cacheInfo.getCacheBidsTtl(),
+                accountAuctionConfig != null ? accountAuctionConfig.getBannerCacheTtl() : null,
+                mediaTypeCacheTtl.getBannerCacheTtl());
+
+    }
+
+    private Integer resolveVideoTtl(Bid bid, Imp imp, BidRequestCacheInfo cacheInfo, Account account) {
+        final AccountAuctionConfig accountAuctionConfig = account.getAuction();
+        final Integer bidTtl = bid.getExp();
+        final Integer impTtl = imp != null ? imp.getExp() : null;
+
+        return ObjectUtils.firstNonNull(
+                bidTtl,
+                impTtl,
+                cacheInfo.getCacheVideoBidsTtl(),
+                accountAuctionConfig != null ? accountAuctionConfig.getVideoCacheTtl() : null,
+                mediaTypeCacheTtl.getVideoCacheTtl());
     }
 
     private Future<List<BidderResponse>> invokeProcessedBidderResponseHooks(List<BidderResponse> bidderResponses,
@@ -470,12 +489,11 @@ public class BidResponseCreator {
             HookStageExecutionResult<BidderResponsePayload> stageResult,
             BidderResponse bidderResponse) {
 
-        final List<BidderBid> bids =
-                stageResult.isShouldReject() ? Collections.emptyList() : stageResult.getPayload().bids();
+        final List<BidderBid> bids = stageResult.isShouldReject()
+                ? Collections.emptyList()
+                : stageResult.getPayload().bids();
 
-        return bidderResponse
-                .with(bidderResponse.getSeatBid()
-                        .with(bids));
+        return bidderResponse.with(bidderResponse.getSeatBid().with(bids));
     }
 
     private Future<CategoryMappingResult> createCategoryMapping(AuctionContext auctionContext,
@@ -484,7 +502,7 @@ public class BidResponseCreator {
         return categoryMappingService.createCategoryMapping(
                         bidderResponses,
                         auctionContext.getBidRequest(),
-                        auctionContext.getTimeout())
+                        auctionContext.getTimeoutContext().getTimeout())
 
                 .map(categoryMappingResult -> addCategoryMappingErrors(categoryMappingResult, auctionContext));
     }
@@ -514,6 +532,7 @@ public class BidResponseCreator {
                     CacheServiceResult.empty(),
                     VideoStoredDataResult.empty(),
                     eventsContext.getAuctionTimestamp(),
+                    null,
                     null);
             final CachedDebugLog cachedDebugLog = auctionContext.getCachedDebugLog();
             if (isCachedDebugEnabled(cachedDebugLog)) {
@@ -522,7 +541,7 @@ public class BidResponseCreator {
 
             return Future.succeededFuture(BidResponse.builder()
                     .id(bidRequest.getId())
-                    .cur(bidRequest.getCur().get(0))
+                    .cur(bidRequest.getCur().getFirst())
                     .nbr(0) // signal "Unknown Error"
                     .seatbid(Collections.emptyList())
                     .ext(extBidResponse)
@@ -530,10 +549,9 @@ public class BidResponseCreator {
         }
 
         final ExtRequestTargeting targeting = targeting(bidRequest);
-        final TxnLog txnLog = auctionContext.getTxnLog();
 
         final List<BidderResponseInfo> bidderResponseInfos = toBidderResponseWithTargetingBidInfos(
-                bidderResponses, bidderToMultiBids, preferDeals(targeting), txnLog);
+                bidderResponses, bidderToMultiBids, preferDeals(targeting));
 
         final Set<BidInfo> bidInfos = bidderResponseInfos.stream()
                 .map(BidderResponseInfo::getSeatBid)
@@ -547,8 +565,6 @@ public class BidResponseCreator {
                 : bidInfos.stream()
                 .filter(bidInfo -> bidInfo.getTargetingInfo().isWinningBid())
                 .collect(Collectors.toSet());
-
-        updateSentToClientTxnLog(txnLog, bidInfos);
 
         final Set<BidInfo> bidsToCache = cacheInfo.isShouldCacheWinningBidsOnly() ? winningBidInfos : bidInfos;
 
@@ -576,8 +592,7 @@ public class BidResponseCreator {
     private List<BidderResponseInfo> toBidderResponseWithTargetingBidInfos(
             List<BidderResponseInfo> bidderResponses,
             Map<String, MultiBidConfig> bidderToMultiBids,
-            boolean preferDeals,
-            TxnLog txnLog) {
+            boolean preferDeals) {
 
         final Map<BidderResponseInfo, List<BidInfo>> bidderResponseToReducedBidInfos = bidderResponses.stream()
                 .collect(Collectors.toMap(
@@ -605,13 +620,6 @@ public class BidResponseCreator {
                     .max(winningBidComparatorFactory.create(preferDeals))
                     .ifPresent(winningBids::add);
         }
-
-        final Map<String, Set<String>> impIdToLineItemIds = impIdToBidderToBidInfos.entrySet().stream()
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        impIdToBidderToBidInfoEntry -> toLineItemIds(impIdToBidderToBidInfoEntry.getValue().values())));
-
-        updateTopMatchAndLostAuctionLineItemsMetric(winningBids, txnLog, impIdToLineItemIds);
 
         return bidderResponseToReducedBidInfos.entrySet().stream()
                 .map(responseToBidInfos -> injectBidInfoWithTargeting(
@@ -645,33 +653,6 @@ public class BidResponseCreator {
                 .sorted(winningBidComparatorFactory.create(preferDeals).reversed())
                 .limit(limit)
                 .toList();
-    }
-
-    private static Set<String> toLineItemIds(Collection<List<BidInfo>> bidInfos) {
-        return bidInfos.stream()
-                .flatMap(Collection::stream)
-                .map(BidInfo::getLineItemId)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-    }
-
-    /**
-     * Updates sent to client as top match and auction lost to line item metric.
-     */
-    private static void updateTopMatchAndLostAuctionLineItemsMetric(Set<BidInfo> winningBidInfos,
-                                                                    TxnLog txnLog,
-                                                                    Map<String, Set<String>> impToLineItemIds) {
-        for (BidInfo winningBidInfo : winningBidInfos) {
-            final String winningLineItemId = winningBidInfo.getLineItemId();
-            if (winningLineItemId != null) {
-                txnLog.lineItemSentToClientAsTopMatch().add(winningLineItemId);
-
-                final String impIdOfWinningBid = winningBidInfo.getBid().getImpid();
-                impToLineItemIds.get(impIdOfWinningBid).stream()
-                        .filter(lineItemId -> !Objects.equals(lineItemId, winningLineItemId))
-                        .forEach(lineItemId -> txnLog.lostAuctionToLineItems().get(lineItemId).add(winningLineItemId));
-            }
-        }
     }
 
     private static BidderResponseInfo injectBidInfoWithTargeting(BidderResponseInfo bidderResponseInfo,
@@ -740,16 +721,6 @@ public class BidResponseCreator {
     }
 
     /**
-     * Increments sent to client metrics for each bid with deal.
-     */
-    private static void updateSentToClientTxnLog(TxnLog txnLog, Set<BidInfo> bidInfos) {
-        bidInfos.stream()
-                .map(BidInfo::getLineItemId)
-                .filter(Objects::nonNull)
-                .forEach(lineItemId -> txnLog.lineItemsSentToClient().add(lineItemId));
-    }
-
-    /**
      * Returns {@link ExtBidResponse} object, populated with response time, errors and debug info (if requested)
      * from all bidders.
      */
@@ -758,7 +729,8 @@ public class BidResponseCreator {
                                             CacheServiceResult cacheResult,
                                             VideoStoredDataResult videoStoredDataResult,
                                             long auctionTimestamp,
-                                            Map<String, List<ExtBidderError>> bidErrors) {
+                                            Map<String, List<ExtBidderError>> bidErrors,
+                                            Map<String, List<ExtBidderError>> bidWarnings) {
 
         final DebugContext debugContext = auctionContext.getDebugContext();
         final boolean debugEnabled = debugContext.isDebugEnabled();
@@ -767,7 +739,8 @@ public class BidResponseCreator {
                 bidderResponseInfos, auctionContext, cacheResult, debugEnabled);
         final Map<String, List<ExtBidderError>> errors = toExtBidderErrors(
                 bidderResponseInfos, auctionContext, cacheResult, videoStoredDataResult, bidErrors);
-        final Map<String, List<ExtBidderError>> warnings = toExtBidderWarnings(bidderResponseInfos, auctionContext);
+        final Map<String, List<ExtBidderError>> warnings = toExtBidderWarnings(
+                bidderResponseInfos, auctionContext, bidWarnings);
 
         final Map<String, Integer> responseTimeMillis = toResponseTimes(bidderResponseInfos, cacheResult);
 
@@ -841,20 +814,15 @@ public class BidResponseCreator {
                                                        CacheServiceResult cacheResult,
                                                        boolean debugEnabled) {
 
-        final DeepDebugLog deepDebugLog = auctionContext.getDeepDebugLog();
-
         final Map<String, List<ExtHttpCall>> httpCalls = debugEnabled
                 ? toExtHttpCalls(bidderResponseInfos, cacheResult, auctionContext.getDebugHttpCalls())
                 : null;
 
         final BidRequest bidRequest = debugEnabled ? auctionContext.getBidRequest() : null;
+        final ExtDebugTrace extDebugTrace = toExtDebugTrace(auctionContext);
 
-        final ExtDebugPgmetrics extDebugPgmetrics = debugEnabled ? toExtDebugPgmetrics(
-                auctionContext.getTxnLog()) : null;
-        final ExtDebugTrace extDebugTrace = deepDebugLog.isDeepDebugEnabled() ? toExtDebugTrace(deepDebugLog) : null;
-
-        return ObjectUtils.anyNotNull(httpCalls, bidRequest, extDebugPgmetrics, extDebugTrace)
-                ? ExtResponseDebug.of(httpCalls, bidRequest, extDebugPgmetrics, extDebugTrace)
+        return ObjectUtils.anyNotNull(httpCalls, bidRequest, extDebugTrace)
+                ? ExtResponseDebug.of(httpCalls, bidRequest, extDebugTrace)
                 : null;
     }
 
@@ -876,13 +844,11 @@ public class BidResponseCreator {
                 .toList();
 
         final CacheContext cacheContext = CacheContext.builder()
-                .cacheBidsTtl(cacheInfo.getCacheBidsTtl())
-                .cacheVideoBidsTtl(cacheInfo.getCacheVideoBidsTtl())
                 .shouldCacheBids(cacheInfo.isShouldCacheBids())
                 .shouldCacheVideoBids(cacheInfo.isShouldCacheVideoBids())
                 .build();
 
-        return cacheService.cacheBidsOpenrtb(bidsValidToBeCached, auctionContext, cacheContext, eventsContext)
+        return coreCacheService.cacheBidsOpenrtb(bidsValidToBeCached, auctionContext, cacheContext, eventsContext)
                 .map(cacheResult -> addNotCachedBids(cacheResult, bidsToCache));
     }
 
@@ -958,37 +924,16 @@ public class BidResponseCreator {
                 .build();
     }
 
-    private static ExtDebugPgmetrics toExtDebugPgmetrics(TxnLog txnLog) {
-        final ExtDebugPgmetrics extDebugPgmetrics = ExtDebugPgmetrics.builder()
-                .matchedDomainTargeting(nullIfEmpty(txnLog.lineItemsMatchedDomainTargeting()))
-                .matchedWholeTargeting(nullIfEmpty(txnLog.lineItemsMatchedWholeTargeting()))
-                .matchedTargetingFcapped(nullIfEmpty(txnLog.lineItemsMatchedTargetingFcapped()))
-                .matchedTargetingFcapLookupFailed(nullIfEmpty(txnLog.lineItemsMatchedTargetingFcapLookupFailed()))
-                .readyToServe(nullIfEmpty(txnLog.lineItemsReadyToServe()))
-                .pacingDeferred(nullIfEmpty(txnLog.lineItemsPacingDeferred()))
-                .sentToBidder(nullIfEmpty(txnLog.lineItemsSentToBidder()))
-                .sentToBidderAsTopMatch(nullIfEmpty(txnLog.lineItemsSentToBidderAsTopMatch()))
-                .receivedFromBidder(nullIfEmpty(txnLog.lineItemsReceivedFromBidder()))
-                .responseInvalidated(nullIfEmpty(txnLog.lineItemsResponseInvalidated()))
-                .sentToClient(nullIfEmpty(txnLog.lineItemsSentToClient()))
-                .sentToClientAsTopMatch(nullIfEmpty(txnLog.lineItemSentToClientAsTopMatch()))
-                .build();
-        return extDebugPgmetrics.equals(ExtDebugPgmetrics.EMPTY) ? null : extDebugPgmetrics;
-    }
+    private static ExtDebugTrace toExtDebugTrace(AuctionContext auctionContext) {
+        if (auctionContext.getDebugContext().getTraceLevel() == null) {
+            return null;
+        }
 
-    private static ExtDebugTrace toExtDebugTrace(DeepDebugLog deepDebugLog) {
-        final List<ExtTraceDeal> entries = deepDebugLog.entries();
+        final List<ExtTraceActivityInfrastructure> activityInfrastructureTrace =
+                new ArrayList<>(auctionContext.getActivityInfrastructure().debugTrace());
 
-        final List<ExtTraceDeal> dealsTrace = entries.stream()
-                .filter(extTraceDeal -> StringUtils.isEmpty(extTraceDeal.getLineItemId()))
-                .toList();
-        final Map<String, List<ExtTraceDeal>> lineItemsTrace = entries.stream()
-                .filter(extTraceDeal -> StringUtils.isNotEmpty(extTraceDeal.getLineItemId()))
-                .collect(Collectors.groupingBy(ExtTraceDeal::getLineItemId, Collectors.toList()));
-
-        return CollectionUtils.isNotEmpty(entries)
-                ? ExtDebugTrace.of(CollectionUtils.isEmpty(dealsTrace) ? null : dealsTrace,
-                MapUtils.isEmpty(lineItemsTrace) ? null : lineItemsTrace)
+        return CollectionUtils.isNotEmpty(activityInfrastructureTrace)
+                ? ExtDebugTrace.of(activityInfrastructureTrace)
                 : null;
     }
 
@@ -1080,7 +1025,7 @@ public class BidResponseCreator {
 
         final List<ExtBidderError> collectedErrors =
                 Stream.concat(contextErrors.stream(), storedErrors.stream()).toList();
-        return Collections.singletonMap(PREBID_EXT, collectedErrors);
+        return Collections.singletonMap(DEFAULT_DEBUG_KEY, collectedErrors);
     }
 
     /**
@@ -1134,12 +1079,16 @@ public class BidResponseCreator {
         }
     }
 
-    private static Map<String, List<ExtBidderError>> toExtBidderWarnings(List<BidderResponseInfo> bidderResponses,
-                                                                         AuctionContext auctionContext) {
+    private static Map<String, List<ExtBidderError>> toExtBidderWarnings(
+            List<BidderResponseInfo> bidderResponses,
+            AuctionContext auctionContext,
+            Map<String, List<ExtBidderError>> bidWarnings) {
+
         final Map<String, List<ExtBidderError>> warnings = new HashMap<>();
 
         warnings.putAll(extractContextWarnings(auctionContext));
         warnings.putAll(extractBidderWarnings(bidderResponses));
+        warnings.putAll(MapUtils.isEmpty(bidWarnings) ? Collections.emptyMap() : bidWarnings);
 
         return warnings.isEmpty() ? null : warnings;
     }
@@ -1151,7 +1100,7 @@ public class BidResponseCreator {
 
         return contextWarnings.isEmpty()
                 ? Collections.emptyMap()
-                : Collections.singletonMap(PREBID_EXT, contextWarnings);
+                : Collections.singletonMap(DEFAULT_DEBUG_KEY, contextWarnings);
     }
 
     /**
@@ -1186,6 +1135,7 @@ public class BidResponseCreator {
         final Account account = auctionContext.getAccount();
 
         final Map<String, List<ExtBidderError>> bidErrors = new HashMap<>();
+        final Map<String, List<ExtBidderError>> bidWarnings = new HashMap<>();
         final List<SeatBid> seatBids = bidderResponseInfos.stream()
                 .map(BidderResponseInfo::getSeatBid)
                 .map(BidderSeatBidInfo::getBidsInfos)
@@ -1197,7 +1147,8 @@ public class BidResponseCreator {
                         requestCacheInfo,
                         cacheResult.getCacheBids(),
                         account,
-                        bidErrors))
+                        bidErrors,
+                        bidWarnings))
                 .toList();
 
         final Long auctionTimestamp = eventsContext.getAuctionTimestamp();
@@ -1207,7 +1158,8 @@ public class BidResponseCreator {
                 cacheResult,
                 videoStoredDataResult,
                 auctionTimestamp,
-                bidErrors);
+                bidErrors,
+                bidWarnings);
 
         final CachedDebugLog cachedDebugLog = auctionContext.getCachedDebugLog();
         if (isCachedDebugEnabled(cachedDebugLog)) {
@@ -1216,7 +1168,7 @@ public class BidResponseCreator {
 
         return BidResponse.builder()
                 .id(bidRequest.getId())
-                .cur(bidRequest.getCur().get(0))
+                .cur(bidRequest.getCur().getFirst())
                 .seatbid(seatBids)
                 .ext(extBidResponse)
                 .build();
@@ -1225,7 +1177,7 @@ public class BidResponseCreator {
     private Future<VideoStoredDataResult> videoStoredDataResult(AuctionContext auctionContext) {
         final List<Imp> imps = auctionContext.getBidRequest().getImp();
         final String accountId = auctionContext.getAccount().getId();
-        final Timeout timeout = auctionContext.getTimeout();
+        final Timeout timeout = auctionContext.getTimeoutContext().getTimeout();
 
         final List<String> errors = new ArrayList<>();
         final List<Imp> storedVideoInjectableImps = new ArrayList<>();
@@ -1274,7 +1226,8 @@ public class BidResponseCreator {
                               BidRequestCacheInfo requestCacheInfo,
                               Map<Bid, CacheInfo> bidToCacheInfo,
                               Account account,
-                              Map<String, List<ExtBidderError>> bidErrors) {
+                              Map<String, List<ExtBidderError>> bidErrors,
+                              Map<String, List<ExtBidderError>> bidWarnings) {
 
         final String bidder = bidInfos.stream()
                 .map(BidInfo::getBidder)
@@ -1293,7 +1246,8 @@ public class BidResponseCreator {
                         bidInfo,
                         targeting,
                         bidRequest,
-                        account))
+                        account,
+                        bidWarnings))
                 .filter(Objects::nonNull)
                 .toList();
 
@@ -1344,7 +1298,11 @@ public class BidResponseCreator {
     /**
      * Returns an OpenRTB {@link Bid} with "prebid" and "bidder" extension fields populated.
      */
-    private Bid toBid(BidInfo bidInfo, ExtRequestTargeting targeting, BidRequest bidRequest, Account account) {
+    private Bid toBid(BidInfo bidInfo,
+                      ExtRequestTargeting targeting,
+                      BidRequest bidRequest,
+                      Account account,
+                      Map<String, List<ExtBidderError>> bidWarnings) {
         final TargetingInfo targetingInfo = bidInfo.getTargetingInfo();
         final BidType bidType = bidInfo.getBidType();
         final Bid bid = bidInfo.getBid();
@@ -1357,9 +1315,9 @@ public class BidResponseCreator {
 
         final Map<String, String> targetingKeywords;
         final String bidderCode = targetingInfo.getBidderCode();
-        if (targeting != null && targetingInfo.isTargetingEnabled() && targetingInfo.isBidderWinningBid()) {
+        if (shouldIncludeTargetingInResponse(targeting, bidInfo.getTargetingInfo())) {
             final TargetingKeywordsCreator keywordsCreator = resolveKeywordsCreator(
-                    bidType, targeting, isApp, bidRequest, account);
+                    bidType, targeting, isApp, bidRequest, account, bidWarnings);
 
             final boolean isWinningBid = targetingInfo.isWinningBid();
             final String categoryDuration = bidInfo.getCategory();
@@ -1393,12 +1351,23 @@ public class BidResponseCreator {
                 originalBidExt != null ? originalBidExt.deepCopy() : mapper.mapper().createObjectNode();
         updatedBidExt.set(PREBID_EXT, mapper.mapper().valueToTree(updatedExtBidPrebid));
 
-        final Integer ttl = cacheInfo != null ? ObjectUtils.max(cacheInfo.getTtl(), cacheInfo.getVideoTtl()) : null;
+        final Integer ttl = Optional.ofNullable(cacheInfo)
+                .map(info -> ObjectUtils.max(cacheInfo.getTtl(), cacheInfo.getVideoTtl()))
+                .orElseGet(() -> ObjectUtils.max(bidInfo.getTtl(), bidInfo.getVideoTtl()));
 
         return bid.toBuilder()
                 .ext(updatedBidExt)
                 .exp(ttl)
                 .build();
+    }
+
+    private boolean shouldIncludeTargetingInResponse(ExtRequestTargeting targeting, TargetingInfo targetingInfo) {
+        return targeting != null
+                && targetingInfo.isTargetingEnabled()
+                && targetingInfo.isBidderWinningBid()
+                && (Objects.equals(targeting.getIncludebidderkeys(), true)
+                || Objects.equals(targeting.getIncludewinners(), true)
+                || Objects.equals(targeting.getIncludeformat(), true));
     }
 
     private JsonNode extractPassThrough(Imp imp) {
@@ -1555,20 +1524,14 @@ public class BidResponseCreator {
     private Events createEvents(String bidder,
                                 Account account,
                                 String bidId,
-                                EventsContext eventsContext,
-                                String lineItemId) {
+                                EventsContext eventsContext) {
 
-        if (!eventsContext.isEnabledForAccount()) {
-            return null;
-        }
-
-        return eventsContext.isEnabledForRequest() || StringUtils.isNotEmpty(lineItemId)
+        return eventsContext.isEnabledForAccount() && eventsContext.isEnabledForRequest()
                 ? eventsService.createEvent(
                 bidId,
                 bidder,
                 account.getId(),
-                lineItemId,
-                eventsContext.isEnabledForRequest(),
+                true,
                 eventsContext)
                 : null;
     }
@@ -1577,12 +1540,14 @@ public class BidResponseCreator {
                                                             ExtRequestTargeting targeting,
                                                             boolean isApp,
                                                             BidRequest bidRequest,
-                                                            Account account) {
+                                                            Account account,
+                                                            Map<String, List<ExtBidderError>> bidWarnings) {
 
         final Map<BidType, TargetingKeywordsCreator> keywordsCreatorByBidType =
-                keywordsCreatorByBidType(targeting, isApp, bidRequest, account);
+                keywordsCreatorByBidType(targeting, isApp, bidRequest, account, bidWarnings);
 
-        return keywordsCreatorByBidType.getOrDefault(bidType, keywordsCreator(targeting, isApp, bidRequest, account));
+        return keywordsCreatorByBidType.getOrDefault(
+                bidType, keywordsCreator(targeting, isApp, bidRequest, account, bidWarnings));
     }
 
     /**
@@ -1592,22 +1557,25 @@ public class BidResponseCreator {
     private TargetingKeywordsCreator keywordsCreator(ExtRequestTargeting targeting,
                                                      boolean isApp,
                                                      BidRequest bidRequest,
-                                                     Account account) {
+                                                     Account account,
+                                                     Map<String, List<ExtBidderError>> bidWarnings) {
 
         final JsonNode priceGranularityNode = targeting.getPricegranularity();
         return priceGranularityNode == null || priceGranularityNode.isNull()
                 ? null
-                : createKeywordsCreator(targeting, isApp, priceGranularityNode, bidRequest, account);
+                : createKeywordsCreator(targeting, isApp, priceGranularityNode, bidRequest, account, bidWarnings);
     }
 
     /**
      * Returns a map of {@link BidType} to correspondent {@link TargetingKeywordsCreator}
      * extracted from {@link ExtRequestTargeting} if it exists.
      */
-    private Map<BidType, TargetingKeywordsCreator> keywordsCreatorByBidType(ExtRequestTargeting targeting,
-                                                                            boolean isApp,
-                                                                            BidRequest bidRequest,
-                                                                            Account account) {
+    private Map<BidType, TargetingKeywordsCreator> keywordsCreatorByBidType(
+            ExtRequestTargeting targeting,
+            boolean isApp,
+            BidRequest bidRequest,
+            Account account,
+            Map<String, List<ExtBidderError>> bidWarnings) {
 
         final ExtMediaTypePriceGranularity mediaTypePriceGranularity = targeting.getMediatypepricegranularity();
         if (mediaTypePriceGranularity == null) {
@@ -1619,19 +1587,23 @@ public class BidResponseCreator {
         final ObjectNode banner = mediaTypePriceGranularity.getBanner();
         final boolean isBannerNull = banner == null || banner.isNull();
         if (!isBannerNull) {
-            result.put(BidType.banner, createKeywordsCreator(targeting, isApp, banner, bidRequest, account));
+            result.put(
+                    BidType.banner, createKeywordsCreator(targeting, isApp, banner, bidRequest, account, bidWarnings));
         }
 
         final ObjectNode video = mediaTypePriceGranularity.getVideo();
         final boolean isVideoNull = video == null || video.isNull();
         if (!isVideoNull) {
-            result.put(BidType.video, createKeywordsCreator(targeting, isApp, video, bidRequest, account));
+            result.put(
+                    BidType.video, createKeywordsCreator(targeting, isApp, video, bidRequest, account, bidWarnings));
         }
 
         final ObjectNode xNative = mediaTypePriceGranularity.getXNative();
         final boolean isNativeNull = xNative == null || xNative.isNull();
         if (!isNativeNull) {
-            result.put(BidType.xNative, createKeywordsCreator(targeting, isApp, xNative, bidRequest, account));
+            result.put(
+                    BidType.xNative, createKeywordsCreator(targeting, isApp, xNative, bidRequest, account, bidWarnings)
+            );
         }
 
         return result;
@@ -1641,8 +1613,11 @@ public class BidResponseCreator {
                                                            boolean isApp,
                                                            JsonNode priceGranularity,
                                                            BidRequest bidRequest,
-                                                           Account account) {
-
+                                                           Account account,
+                                                           Map<String, List<ExtBidderError>> bidWarnings) {
+        final int resolvedTruncateAttrChars = resolveTruncateAttrChars(targeting, account);
+        final String resolveKeyPrefix = resolveAndValidateKeyPrefix(
+                bidRequest, account, resolvedTruncateAttrChars, bidWarnings);
         return TargetingKeywordsCreator.create(
                 parsePriceGranularity(priceGranularity),
                 BooleanUtils.toBoolean(targeting.getIncludewinners()),
@@ -1650,10 +1625,11 @@ public class BidResponseCreator {
                 BooleanUtils.toBoolean(targeting.getAlwaysincludedeals()),
                 BooleanUtils.isTrue(targeting.getIncludeformat()),
                 isApp,
-                resolveTruncateAttrChars(targeting, account),
+                resolvedTruncateAttrChars,
                 cacheHost,
                 cachePath,
-                TargetingKeywordsResolver.create(bidRequest, mapper));
+                TargetingKeywordsResolver.create(bidRequest, mapper),
+                resolveKeyPrefix);
     }
 
     /**
@@ -1668,6 +1644,41 @@ public class BidResponseCreator {
                 truncateAttrCharsOrNull(targeting.getTruncateattrchars()),
                 truncateAttrCharsOrNull(accountTruncateTargetAttr),
                 truncateAttrChars);
+    }
+
+    /**
+     * Returns targeting key prefix.
+     * Default prefix for targeting keys used in cases,
+     * when correspond value is missing in account auction configuration or bid request ext,
+     * or may compose keys longer than 'settings.targeting.truncate-attr-chars' value.
+     */
+    private static String resolveAndValidateKeyPrefix(BidRequest bidRequest,
+                                                      Account account,
+                                                      int truncateAttrChars,
+                                                      Map<String, List<ExtBidderError>> bidWarnings) {
+        final String prefix = Optional.of(bidRequest)
+                .map(BidRequest::getExt)
+                .map(ExtRequest::getPrebid)
+                .map(ExtRequestPrebid::getTargeting)
+                .map(ExtRequestTargeting::getPrefix)
+                .orElse(Optional.ofNullable(account)
+                        .map(Account::getAuction)
+                        .map(AccountAuctionConfig::getTargeting)
+                        .map(AccountTargetingConfig::getPrefix)
+                        .orElse(null));
+
+        final boolean customPrefixIsNotSuitable =
+                StringUtils.isNotEmpty(prefix) && prefix.length() + MAX_TARGETING_KEY_LENGTH > truncateAttrChars;
+        if (customPrefixIsNotSuitable) {
+            final String errorMessage = "Key prefix value is dropped to default. "
+                    + "Decrease custom prefix length or increase truncateattrchars by "
+                    + (prefix.length() + MAX_TARGETING_KEY_LENGTH - truncateAttrChars);
+            bidWarnings.computeIfAbsent("targeting", ignored -> new ArrayList<>())
+                    .add(ExtBidderError.of(BidderError.Type.bad_input.getCode(), errorMessage));
+        }
+        return StringUtils.isEmpty(prefix) || customPrefixIsNotSuitable
+                ? DEFAULT_TARGETING_KEY_PREFIX
+                : prefix;
     }
 
     private static Integer truncateAttrCharsOrNull(Integer value) {
@@ -1731,13 +1742,6 @@ public class BidResponseCreator {
             return null;
         }
         return Collections.unmodifiableSet(set);
-    }
-
-    private static <K, V> Map<K, V> nullIfEmpty(Map<K, V> map) {
-        if (map.isEmpty()) {
-            return null;
-        }
-        return Collections.unmodifiableMap(map);
     }
 
     /**
