@@ -19,6 +19,7 @@ import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.auction.DebugResolver;
 import org.prebid.server.auction.FpdResolver;
+import org.prebid.server.auction.GeoLocationServiceWrapper;
 import org.prebid.server.auction.ImplicitParametersExtractor;
 import org.prebid.server.auction.OrtbTypesResolver;
 import org.prebid.server.auction.PriceGranularity;
@@ -26,7 +27,7 @@ import org.prebid.server.auction.StoredRequestProcessor;
 import org.prebid.server.auction.gpp.AmpGppService;
 import org.prebid.server.auction.model.AuctionContext;
 import org.prebid.server.auction.model.ConsentType;
-import org.prebid.server.auction.privacycontextfactory.AmpPrivacyContextFactory;
+import org.prebid.server.auction.privacy.contextfactory.AmpPrivacyContextFactory;
 import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.json.JacksonMapper;
@@ -50,7 +51,6 @@ import org.prebid.server.proto.openrtb.ext.request.ExtRequestTargeting;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtStoredRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
-import org.prebid.server.proto.request.Targeting;
 import org.prebid.server.settings.model.Account;
 import org.prebid.server.util.HttpUtil;
 
@@ -97,6 +97,7 @@ public class AmpRequestFactory {
     private final AmpPrivacyContextFactory ampPrivacyContextFactory;
     private final DebugResolver debugResolver;
     private final JacksonMapper mapper;
+    private final GeoLocationServiceWrapper geoLocationServiceWrapper;
 
     public AmpRequestFactory(Ortb2RequestFactory ortb2RequestFactory,
                              StoredRequestProcessor storedRequestProcessor,
@@ -108,7 +109,8 @@ public class AmpRequestFactory {
                              FpdResolver fpdResolver,
                              AmpPrivacyContextFactory ampPrivacyContextFactory,
                              DebugResolver debugResolver,
-                             JacksonMapper mapper) {
+                             JacksonMapper mapper,
+                             GeoLocationServiceWrapper geoLocationServiceWrapper) {
 
         this.ortb2RequestFactory = Objects.requireNonNull(ortb2RequestFactory);
         this.storedRequestProcessor = Objects.requireNonNull(storedRequestProcessor);
@@ -121,6 +123,7 @@ public class AmpRequestFactory {
         this.debugResolver = Objects.requireNonNull(debugResolver);
         this.ampPrivacyContextFactory = Objects.requireNonNull(ampPrivacyContextFactory);
         this.mapper = Objects.requireNonNull(mapper);
+        this.geoLocationServiceWrapper = Objects.requireNonNull(geoLocationServiceWrapper);
     }
 
     /**
@@ -143,6 +146,12 @@ public class AmpRequestFactory {
 
                 .map(auctionContext -> auctionContext.with(debugResolver.debugContextFrom(auctionContext)))
 
+                .compose(auctionContext -> geoLocationServiceWrapper.lookup(auctionContext)
+                        .map(auctionContext::with))
+
+                .compose(auctionContext -> ortb2RequestFactory.enrichBidRequestWithGeolocationData(auctionContext)
+                        .map(auctionContext::with))
+
                 .compose(auctionContext -> gppService.contextFrom(auctionContext)
                         .map(auctionContext::with))
 
@@ -155,17 +164,13 @@ public class AmpRequestFactory {
                 .compose(auctionContext -> ampPrivacyContextFactory.contextFrom(auctionContext)
                         .map(auctionContext::with))
 
-                .map(auctionContext -> auctionContext.with(
-                        ortb2RequestFactory.enrichBidRequestWithAccountAndPrivacyData(auctionContext)))
+                .compose(auctionContext -> ortb2RequestFactory.enrichBidRequestWithAccountAndPrivacyData(auctionContext)
+                        .map(auctionContext::with))
 
                 .compose(auctionContext -> ortb2RequestFactory.executeProcessedAuctionRequestHooks(auctionContext)
                         .map(auctionContext::with))
 
-                .compose(ortb2RequestFactory::populateUserAdditionalInfo)
-
-                .map(ortb2RequestFactory::enrichWithPriceFloors)
-
-                .map(auctionContext -> ortb2RequestFactory.updateTimeout(auctionContext, startTime))
+                .map(ortb2RequestFactory::updateTimeout)
 
                 .recover(ortb2RequestFactory::restoreResultFromRejection);
     }
@@ -186,9 +191,12 @@ public class AmpRequestFactory {
 
         final String addtlConsent = addtlConsentFromQueryStringParams(httpRequest);
         final Integer gdpr = gdprFromQueryStringParams(httpRequest);
-        final GppSidExtraction gppSidExtraction = gppSidFromQueryStringParams(httpRequest);
-        final String gpc = implicitParametersExtractor.gpcFrom(httpRequest);
         final Integer debug = debugFromQueryStringParam(httpRequest);
+        final GppSidExtraction gppSidExtraction = gppSidFromQueryStringParams(
+                httpRequest,
+                debug != null && debug == 1,
+                auctionContext.getDebugWarnings());
+        final String gpc = implicitParametersExtractor.gpcFrom(httpRequest);
         final Long timeout = timeoutFromQueryString(httpRequest);
 
         final BidRequest bidRequest = BidRequest.builder()
@@ -290,7 +298,7 @@ public class AmpRequestFactory {
                 .usPrivacy(usPrivacy)
                 .gppSid(gppSid)
                 .gpp(gpp)
-                .ext(gpc != null ? ExtRegs.of(null, null, gpc) : null)
+                .ext(gpc != null ? ExtRegs.of(null, null, gpc, null) : null)
                 .build()
                 : null;
     }
@@ -335,7 +343,10 @@ public class AmpRequestFactory {
         return null;
     }
 
-    private static GppSidExtraction gppSidFromQueryStringParams(HttpRequestContext httpRequest) {
+    private GppSidExtraction gppSidFromQueryStringParams(HttpRequestContext httpRequest,
+                                                         boolean debugEnabled,
+                                                         List<String> debugWarnings) {
+
         final String gppSidParam = httpRequest.getQueryParams().get(GPP_SID_PARAM);
 
         try {
@@ -347,6 +358,9 @@ public class AmpRequestFactory {
 
             return GppSidExtraction.success(gppSid);
         } catch (IllegalArgumentException e) {
+            if (debugEnabled) {
+                debugWarnings.add("Failed to parse gppSid: '%s'".formatted(gppSidParam));
+            }
             return GppSidExtraction.failed();
         }
     }
@@ -395,13 +409,11 @@ public class AmpRequestFactory {
                 .map(bidRequest -> validateStoredBidRequest(storedRequestId, bidRequest))
                 .map(this::fillExplicitParameters)
                 .map(bidRequest -> overrideParameters(bidRequest, httpRequest, auctionContext.getPrebidErrors()))
-                .map(bidRequest -> paramsResolver.resolve(
-                        bidRequest,
-                        httpRequest,
-                        ENDPOINT,
-                        true))
-                .compose(resolvedBidRequest ->
-                        ortb2RequestFactory.validateRequest(resolvedBidRequest, auctionContext.getDebugWarnings()));
+                .map(bidRequest -> paramsResolver.resolve(bidRequest, auctionContext, ENDPOINT, true))
+                .compose(resolvedBidRequest -> ortb2RequestFactory.validateRequest(
+                        resolvedBidRequest,
+                        auctionContext.getHttpRequest(),
+                        auctionContext.getDebugWarnings()));
     }
 
     private static String storedRequestId(BidRequest receivedBidRequest) {
@@ -449,7 +461,7 @@ public class AmpRequestFactory {
     private BidRequest fillExplicitParameters(BidRequest bidRequest) {
         final List<Imp> imps = bidRequest.getImp();
         // Force HTTPS as AMP requires it, but pubs can forget to set it.
-        final Imp imp = imps.get(0);
+        final Imp imp = imps.getFirst();
         final Integer secure = imp.getSecure();
         final boolean setSecure = secure == null || secure != 1;
 
@@ -480,7 +492,7 @@ public class AmpRequestFactory {
                 || setDefaultCache) {
 
             result = bidRequest.toBuilder()
-                    .imp(setSecure ? Collections.singletonList(imps.get(0).toBuilder().secure(1).build()) : imps)
+                    .imp(setSecure ? Collections.singletonList(imps.getFirst().toBuilder().secure(1).build()) : imps)
                     .ext(extRequest(
                             bidRequest,
                             setDefaultTargeting,
@@ -498,19 +510,16 @@ public class AmpRequestFactory {
     private BidRequest overrideParameters(BidRequest bidRequest, HttpRequestContext httpRequest, List<String> errors) {
         final String requestTargeting = httpRequest.getQueryParams().get(TARGETING_REQUEST_PARAM);
         final ObjectNode targetingNode = readTargeting(requestTargeting);
-        ortbTypesResolver.normalizeTargeting(
-                targetingNode, errors, implicitParametersExtractor.refererFrom(httpRequest));
-        final Targeting targeting = parseTargeting(targetingNode);
+        final String referer = implicitParametersExtractor.refererFrom(httpRequest);
+        ortbTypesResolver.normalizeTargeting(targetingNode, errors, referer);
 
         final Site updatedSite = overrideSite(bidRequest.getSite());
-        final Imp updatedImp = overrideImp(bidRequest.getImp().get(0), httpRequest, targetingNode);
-        final ExtRequest updatedExtBidRequest = overrideExtBidRequest(bidRequest.getExt(), targeting);
+        final Imp updatedImp = overrideImp(bidRequest.getImp().getFirst(), httpRequest, targetingNode);
 
-        if (ObjectUtils.anyNotNull(updatedSite, updatedImp, updatedExtBidRequest)) {
+        if (ObjectUtils.anyNotNull(updatedSite, updatedImp)) {
             return bidRequest.toBuilder()
                     .site(updatedSite != null ? updatedSite : bidRequest.getSite())
                     .imp(updatedImp != null ? Collections.singletonList(updatedImp) : bidRequest.getImp())
-                    .ext(updatedExtBidRequest != null ? updatedExtBidRequest : bidRequest.getExt())
                     .build();
         }
 
@@ -535,16 +544,6 @@ public class AmpRequestFactory {
         } else {
             throw new InvalidRequestException("Error decoding targeting, expected type is `object` but was "
                     + jsonNodeTargeting.getNodeType().name());
-        }
-    }
-
-    private Targeting parseTargeting(ObjectNode targetingNode) {
-        try {
-            return targetingNode == null
-                    ? Targeting.empty()
-                    : mapper.mapper().treeToValue(targetingNode, Targeting.class);
-        } catch (JsonProcessingException e) {
-            throw new InvalidRequestException("Error decoding targeting from url: " + e.getMessage());
         }
     }
 
@@ -662,13 +661,6 @@ public class AmpRequestFactory {
         return banner != null && CollectionUtils.isNotEmpty(formats)
                 ? banner.toBuilder().format(formats).build()
                 : banner;
-    }
-
-    /**
-     * Overrides {@link ExtRequest} with first party data.
-     */
-    private ExtRequest overrideExtBidRequest(ExtRequest extRequest, Targeting targeting) {
-        return fpdResolver.resolveBidRequestExt(extRequest, targeting);
     }
 
     private static List<Format> parseMultiSizeParam(String ms) {
