@@ -1,6 +1,7 @@
 package org.prebid.server.bidder.adkernel;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.Audio;
 import com.iab.openrtb.request.Banner;
@@ -14,7 +15,7 @@ import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
 import io.vertx.core.http.HttpMethod;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -26,6 +27,7 @@ import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.adkernel.ExtImpAdkernel;
 import org.prebid.server.util.HttpUtil;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.function.UnaryOperator;
@@ -36,8 +38,10 @@ import static java.util.function.UnaryOperator.identity;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 import static org.assertj.core.api.Assertions.tuple;
+import static org.prebid.server.proto.openrtb.ext.response.BidType.audio;
 import static org.prebid.server.proto.openrtb.ext.response.BidType.banner;
 import static org.prebid.server.proto.openrtb.ext.response.BidType.video;
+import static org.prebid.server.proto.openrtb.ext.response.BidType.xNative;
 
 public class AdkernelBidderTest extends VertxTest {
 
@@ -91,7 +95,8 @@ public class AdkernelBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestsShouldReturnErrorIfExtZoneIdisEmpty() {
         // given
-        final BidRequest bidRequest = givenBidRequest(identity(), extImpAdkernel -> ExtImpAdkernel.of(null));
+        final BidRequest bidRequest = givenBidRequest(
+                identity(), impBuilder -> impBuilder.ext(givenImpExt(null)));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -105,7 +110,8 @@ public class AdkernelBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestsShouldReturnErrorIfExtZoneIdIsInvalid() {
         // given
-        final BidRequest bidRequest = givenBidRequest(identity(), extImpAdkernel -> ExtImpAdkernel.of(0));
+        final BidRequest bidRequest = givenBidRequest(
+                identity(), impBuilder -> impBuilder.ext(givenImpExt(0)));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -119,7 +125,7 @@ public class AdkernelBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestsShouldSetExpectedMethodUrlAndHeaders() {
         // given
-        final BidRequest bidRequest = givenBidRequest(identity());
+        final BidRequest bidRequest = givenBidRequest(identity(), identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -129,7 +135,7 @@ public class AdkernelBidderTest extends VertxTest {
         assertThat(result.getValue()).hasSize(1).element(0).isNotNull()
                 .returns(HttpMethod.POST, HttpRequest::getMethod)
                 .returns("https://test.com?zone=3426", HttpRequest::getUri);
-        assertThat(result.getValue().get(0).getHeaders()).isNotNull()
+        assertThat(result.getValue().getFirst().getHeaders()).isNotNull()
                 .extracting(Map.Entry::getKey, Map.Entry::getValue)
                 .containsExactly(
                         tuple(HttpUtil.CONTENT_TYPE_HEADER.toString(), "application/json;charset=utf-8"),
@@ -140,9 +146,7 @@ public class AdkernelBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestShouldAlwaysSetImpExtNull() {
         // given
-        final BidRequest bidRequest = givenBidRequest(builder -> builder.site(Site.builder().build()),
-                identity(),
-                identity());
+        final BidRequest bidRequest = givenBidRequest(builder -> builder.site(Site.builder().build()), identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -157,11 +161,14 @@ public class AdkernelBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestShouldSetAudioVideoAndNativeNullAndKeepBannerWhenBannerIsPresent() {
+    public void makeHttpRequestsShouldSplitImpsByMediaTypeAndAddSuffixToImpId() {
         // give
         final BidRequest bidRequest = givenBidRequest(
+                identity(),
                 impBuilder -> impBuilder
+                        .id("impId")
                         .banner(Banner.builder().build())
+                        .video(Video.builder().build())
                         .xNative(Native.builder().build())
                         .audio(Audio.builder().build()));
 
@@ -169,41 +176,23 @@ public class AdkernelBidderTest extends VertxTest {
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
 
         // then
+        final Imp expectedBannerImp = Imp.builder().id("impIdb__mf").banner(Banner.builder().build()).build();
+        final Imp expectedVideoImp = Imp.builder().id("impIdv__mf").video(Video.builder().build()).build();
+        final Imp expectedAudioImp = Imp.builder().id("impIda__mf").audio(Audio.builder().build()).build();
+        final Imp expectedNativeImp = Imp.builder().id("impIdn__mf").xNative(Native.builder().build()).build();
+
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1)
                 .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
                 .flatExtracting(BidRequest::getImp)
-                .extracting(Imp::getBanner, Imp::getVideo, Imp::getAudio, Imp::getXNative)
-                .containsExactly(tuple(Banner.builder().build(), null, null, null));
-    }
-
-    @Test
-    public void makeHttpRequestShouldSetAudioAndNativeNullAndKeepBannerNullWhenVideoIsPresent() {
-        // given
-        final BidRequest bidRequest = givenBidRequest(
-                impBuilder -> impBuilder
-                        .xNative(Native.builder().build())
-                        .audio(Audio.builder().build()));
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue()).hasSize(1)
-                .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
-                .flatExtracting(BidRequest::getImp)
-                .extracting(Imp::getBanner, Imp::getVideo, Imp::getAudio, Imp::getXNative)
-                .containsExactly(tuple(null, Video.builder().build(), null, null));
+                .containsExactlyInAnyOrder(expectedBannerImp, expectedVideoImp, expectedAudioImp, expectedNativeImp);
     }
 
     @Test
     public void makeHttpRequestShouldModifySite() {
         // given
         final BidRequest bidRequest = givenBidRequest(
-                builder -> builder.site(Site.builder().publisher(Publisher.builder().build()).build()),
-                identity(),
-                identity());
+                builder -> builder.site(Site.builder().publisher(Publisher.builder().build()).build()), identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -222,7 +211,6 @@ public class AdkernelBidderTest extends VertxTest {
         final BidRequest bidRequest = givenBidRequest(
                 builder -> builder.site(null)
                         .app(App.builder().publisher(Publisher.builder().build()).build()),
-                identity(),
                 identity());
 
         // when
@@ -248,7 +236,7 @@ public class AdkernelBidderTest extends VertxTest {
         assertThat(result.getErrors()).hasSize(1);
         assertThat(result.getErrors()).allMatch(error -> error.getType() == BidderError.Type.bad_server_response
                 && error.getMessage().startsWith("Failed to decode: Unrecognized token"));
-        assertThat(result.getErrors().get(0).getType()).isEqualTo(BidderError.Type.bad_server_response);
+        assertThat(result.getErrors().getFirst().getType()).isEqualTo(BidderError.Type.bad_server_response);
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -296,11 +284,141 @@ public class AdkernelBidderTest extends VertxTest {
     }
 
     @Test
+    public void makeBidsShouldResolveBidTypeFromMfSuffixWhenPresent() throws JsonProcessingException {
+        // given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(
+                        identity(),
+                        impBuilder -> impBuilder.id("123").banner(Banner.builder().build())
+                                .video(Video.builder().build())),
+                mapper.writeValueAsString(
+                        givenBidResponse(
+                                bidBuilder -> bidBuilder.impid("123b__mf"),
+                                bidBuilder -> bidBuilder.impid("123v__mf"),
+                                bidBuilder -> bidBuilder.impid("123a__mf"),
+                                bidBuilder -> bidBuilder.impid("123n__mf"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue())
+                .containsExactlyInAnyOrder(
+                        BidderBid.of(Bid.builder().impid("123").build(), banner, "USD"),
+                        BidderBid.of(Bid.builder().impid("123").build(), video, "USD"),
+                        BidderBid.of(Bid.builder().impid("123").build(), audio, "USD"),
+                        BidderBid.of(Bid.builder().impid("123").build(), xNative, "USD"));
+    }
+
+    @Test
+    public void makeBidsShouldResolveVideoBidTypeFromImpWhenMfSuffixIsAbsentAndVideoPresentInRequestImp()
+            throws JsonProcessingException {
+
+        // given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(
+                        identity(),
+                        impBuilder -> impBuilder
+                                .id("123")
+                                .video(Video.builder().build())
+                                .banner(null)
+                                .audio(null)
+                                .xNative(null)),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue()).containsExactly(
+                BidderBid.of(Bid.builder().impid("123").build(), video, "USD"));
+    }
+
+    @Test
+    public void makeBidsShouldResolveBannerBidTypeFromImpWhenMfSuffixIsAbsentAndBannerPresentInRequestImp()
+            throws JsonProcessingException {
+
+        // given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(
+                        identity(),
+                        impBuilder -> impBuilder
+                                .id("123")
+                                .video(null)
+                                .banner(Banner.builder().build())
+                                .audio(null)
+                                .xNative(null)),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue()).containsExactly(
+                BidderBid.of(Bid.builder().impid("123").build(), banner, "USD"));
+    }
+
+    @Test
+    public void makeBidsShouldResolveAudioBidTypeFromImpWhenMfSuffixIsAbsentAndAudioPresentInRequestImp()
+            throws JsonProcessingException {
+
+        // given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(
+                        identity(),
+                        impBuilder -> impBuilder
+                                .id("123")
+                                .video(null)
+                                .banner(null)
+                                .audio(Audio.builder().build())
+                                .xNative(null)),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue()).containsExactly(
+                BidderBid.of(Bid.builder().impid("123").build(), audio, "USD"));
+    }
+
+    @Test
+    public void makeBidsShouldResolveNativeBidTypeFromImpWhenMfSuffixIsAbsentAndNativePresentInRequestImp()
+            throws JsonProcessingException {
+
+        // given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(
+                        identity(),
+                        impBuilder -> impBuilder
+                                .id("123")
+                                .video(null)
+                                .banner(null)
+                                .audio(null)
+                                .xNative(Native.builder().build())),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue()).containsExactly(
+                BidderBid.of(Bid.builder().impid("123").build(), xNative, "USD"));
+    }
+
+    @Test
     public void makeBidsShouldReturnVideoBid() throws JsonProcessingException {
         // given
         final BidderCall<BidRequest> httpCall = givenHttpCall(
-                givenBidRequest(impBuilder -> impBuilder.id("123")
-                        .video(Video.builder().build())),
+                givenBidRequest(
+                        identity(),
+                        impBuilder -> impBuilder.id("123")
+                                .video(Video.builder().build())),
                 mapper.writeValueAsString(
                         givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
 
@@ -317,9 +435,11 @@ public class AdkernelBidderTest extends VertxTest {
     public void makeBidsShouldReturnBannerBidIfRequestImpHasBanner() throws JsonProcessingException {
         // given
         final BidderCall<BidRequest> httpCall = givenHttpCall(
-                givenBidRequest(builder -> builder.id("123")
-                        .video(Video.builder().build())
-                        .banner(Banner.builder().build())),
+                givenBidRequest(
+                        identity(),
+                        builder -> builder.id("123")
+                                .video(Video.builder().build())
+                                .banner(Banner.builder().build())),
                 mapper.writeValueAsString(
                         givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
 
@@ -332,41 +452,38 @@ public class AdkernelBidderTest extends VertxTest {
                 .containsExactly(BidderBid.of(Bid.builder().impid("123").build(), banner, "USD"));
     }
 
-    private static BidRequest givenBidRequest(UnaryOperator<Imp.ImpBuilder> impCustomizer) {
-        return givenBidRequest(identity(), impCustomizer, identity());
-    }
-
-    private static BidRequest givenBidRequest(UnaryOperator<Imp.ImpBuilder> impCustomizer,
-                                              UnaryOperator<ExtImpAdkernel> extCustomizer) {
-        return givenBidRequest(identity(), impCustomizer, extCustomizer);
-    }
-
+    @SafeVarargs
     private static BidRequest givenBidRequest(UnaryOperator<BidRequest.BidRequestBuilder> bidRequestCustomizer,
-                                              UnaryOperator<Imp.ImpBuilder> impCustomizer,
-                                              UnaryOperator<ExtImpAdkernel> extCustomizer) {
+                                              UnaryOperator<Imp.ImpBuilder>... impCustomizers) {
 
-        return bidRequestCustomizer.apply(BidRequest.builder()
-                        .site(Site.builder().build())
-                        .imp(singletonList(givenImp(impCustomizer, extCustomizer))))
+        return bidRequestCustomizer.apply(
+                        BidRequest.builder()
+                                .site(Site.builder().build())
+                                .imp(Arrays.stream(impCustomizers).map(AdkernelBidderTest::givenImp).toList()))
                 .build();
     }
 
-    private static Imp givenImp(UnaryOperator<Imp.ImpBuilder> impCustomizer,
-                                UnaryOperator<ExtImpAdkernel> extCustomizer) {
-
+    private static Imp givenImp(UnaryOperator<Imp.ImpBuilder> impCustomizer) {
         return impCustomizer.apply(Imp.builder()
                         .id("123")
                         .video(Video.builder().build())
-                        .ext(mapper.valueToTree(ExtPrebid.of(null,
-                                extCustomizer.apply(ExtImpAdkernel.of(3426))))))
+                        .ext(givenImpExt(3426)))
                 .build();
     }
 
-    private static BidResponse givenBidResponse(UnaryOperator<Bid.BidBuilder> bidCustomizer) {
+    private static ObjectNode givenImpExt(Integer zoneId) {
+        return mapper.valueToTree(ExtPrebid.of(null,
+                ExtImpAdkernel.of(zoneId)));
+    }
+
+    @SafeVarargs
+    private static BidResponse givenBidResponse(UnaryOperator<Bid.BidBuilder>... bidCustomizers) {
         return BidResponse.builder()
                 .cur("USD")
                 .seatbid(singletonList(SeatBid.builder()
-                        .bid(singletonList(bidCustomizer.apply(Bid.builder()).build()))
+                        .bid(Arrays.stream(bidCustomizers)
+                                .map(bidCustomizer -> bidCustomizer.apply(Bid.builder()).build())
+                                .toList())
                         .build()))
                 .build();
     }
