@@ -32,14 +32,15 @@ import com.iab.openrtb.request.Uid;
 import com.iab.openrtb.request.User;
 import com.iab.openrtb.request.Video;
 import com.iab.openrtb.request.VideoObject;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.BidderCatalog;
+import org.prebid.server.metric.MetricName;
+import org.prebid.server.metric.Metrics;
 import org.prebid.server.proto.openrtb.ext.request.ExtDevice;
 import org.prebid.server.proto.openrtb.ext.request.ExtDeviceInt;
 import org.prebid.server.proto.openrtb.ext.request.ExtDevicePrebid;
@@ -78,29 +79,30 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mock.Strictness.LENIENT;
 import static org.mockito.Mockito.verify;
 
+@ExtendWith(MockitoExtension.class)
 public class RequestValidatorTest extends VertxTest {
 
     private static final String RUBICON = "rubicon";
 
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
-
-    @Mock
+    @Mock(strictness = LENIENT)
     private BidderCatalog bidderCatalog;
-    @Mock
+    @Mock(strictness = LENIENT)
     private BidderParamValidator bidderParamValidator;
+    @Mock
+    private Metrics metrics;
 
-    private RequestValidator requestValidator;
+    private RequestValidator target;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         given(bidderParamValidator.validate(any(), any())).willReturn(Collections.emptySet());
         given(bidderCatalog.isValidName(eq(RUBICON))).willReturn(true);
         given(bidderCatalog.isActive(eq(RUBICON))).willReturn(true);
 
-        requestValidator = new RequestValidator(bidderCatalog, bidderParamValidator, jacksonMapper);
+        target = new RequestValidator(bidderCatalog, bidderParamValidator, metrics, jacksonMapper, 0.01, false);
     }
 
     @Test
@@ -109,7 +111,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = BidRequest.builder().build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result).isNotNull();
@@ -122,7 +124,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().id("").build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -135,7 +137,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().id(null).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -148,7 +150,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().id("1").tmax(-100L).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -161,7 +163,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().tmax(null).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -173,7 +175,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().cur(null).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -187,7 +189,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().imp(null).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -202,7 +204,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -217,7 +219,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -237,7 +239,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -256,7 +258,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -274,7 +276,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -296,7 +298,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -321,7 +323,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.hasErrors()).isFalse();
@@ -342,7 +344,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -366,7 +368,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -390,7 +392,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -415,7 +417,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -440,7 +442,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -465,7 +467,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -482,7 +484,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors())
@@ -500,7 +502,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors())
@@ -525,7 +527,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -550,7 +552,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -574,7 +576,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -599,7 +601,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -623,7 +625,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -648,7 +650,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -662,7 +664,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(1).w(2).wmin(3).wratio(4).hratio(5));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -677,7 +679,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(1).w(2).hratio(5));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -692,7 +694,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(1).wmin(3).wratio(4).hratio(5));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -707,7 +709,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(1).w(2));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -720,7 +722,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(3).wratio(4).hratio(5));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -732,7 +734,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = overwriteBannerFormatInFirstImp(validBidRequestBuilder().build(), identity());
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -747,7 +749,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(null).w(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -761,7 +763,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(0).w(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -775,7 +777,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(1).w(null));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -789,7 +791,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(1).w(0));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -803,7 +805,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(-1).w(2));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -817,7 +819,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().h(2).w(-1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -831,7 +833,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(null).wratio(2).hratio(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -846,7 +848,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(0).wratio(2).hratio(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -861,7 +863,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(-1).wratio(2).hratio(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -876,7 +878,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(1).wratio(null).hratio(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -891,7 +893,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(1).wratio(0).hratio(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -906,7 +908,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(1).wratio(-1).hratio(1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -921,7 +923,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(1).wratio(5).hratio(null));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -936,7 +938,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(1).wratio(5).hratio(0));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -951,7 +953,7 @@ public class RequestValidatorTest extends VertxTest {
                 formatBuilder -> Format.builder().wmin(1).wratio(5).hratio(-1));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -966,7 +968,7 @@ public class RequestValidatorTest extends VertxTest {
                 dealBuilder -> Deal.builder().id(null));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -980,7 +982,7 @@ public class RequestValidatorTest extends VertxTest {
                 dealBuilder -> Deal.builder().id(""));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -993,7 +995,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().site(Site.builder().id(null).build()).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1006,7 +1008,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().site(Site.builder().id("").build()).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1019,7 +1021,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().site(Site.builder().id("1").page(null).build()).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.hasErrors()).isFalse();
@@ -1031,7 +1033,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().site(Site.builder().id("1").page("").build()).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.hasErrors()).isFalse();
@@ -1043,7 +1045,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().site(Site.builder().id("").page("").build()).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1058,7 +1060,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1073,7 +1075,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1087,7 +1089,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().site(null).dooh(invalidDooh).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1101,72 +1103,11 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().site(null).dooh(invalidDooh).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
                 .containsOnly("request.dooh should include at least one of request.dooh.id or request.dooh.venuetype.");
-    }
-
-    @Test
-    public void validateShouldFailWhenDoohSiteAndAppArePresentInRequest() {
-        // when
-        final BidRequest invalidRequest = validBidRequestBuilder()
-                .dooh(Dooh.builder().build())
-                .app(App.builder().build())
-                .site(Site.builder().build())
-                .build();
-        final ValidationResult result = requestValidator.validate(invalidRequest);
-
-        // then
-        assertThat(result.getErrors()).hasSize(1)
-                .containsOnly("request.site and request.dooh and request.app are present, "
-                        + "but no more than one of request.site or request.app or request.dooh can be defined");
-    }
-
-    @Test
-    public void validateShouldFailWhenSiteAndAppArePresentInRequest() {
-        // when
-        final BidRequest invalidRequest = validBidRequestBuilder()
-                .app(App.builder().build())
-                .site(Site.builder().build())
-                .build();
-        final ValidationResult result = requestValidator.validate(invalidRequest);
-
-        // then
-        assertThat(result.getErrors()).hasSize(1)
-                .containsOnly("request.site and request.app are present, "
-                        + "but no more than one of request.site or request.app or request.dooh can be defined");
-    }
-
-    @Test
-    public void validateShouldFailWhenDoohAndSiteArePresentInRequest() {
-        // when
-        final BidRequest invalidRequest = validBidRequestBuilder()
-                .dooh(Dooh.builder().build())
-                .site(Site.builder().build())
-                .build();
-        final ValidationResult result = requestValidator.validate(invalidRequest);
-
-        // then
-        assertThat(result.getErrors()).hasSize(1)
-                .containsOnly("request.site and request.dooh are present, "
-                        + "but no more than one of request.site or request.app or request.dooh can be defined");
-    }
-
-    @Test
-    public void validateShouldFailWhenDoohAndAppArePresentInRequest() {
-        // when
-        final BidRequest invalidRequest = validBidRequestBuilder()
-                .dooh(Dooh.builder().build())
-                .app(App.builder().build())
-                .build();
-        final ValidationResult result = requestValidator.validate(invalidRequest);
-
-        // then
-        assertThat(result.getErrors()).hasSize(1)
-                .containsOnly("request.site and request.dooh and request.app are present, "
-                        + "but no more than one of request.site or request.app or request.dooh can be defined");
     }
 
     @Test
@@ -1179,11 +1120,79 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
                 .containsOnly("One of request.site or request.app or request.dooh must be defined");
+    }
+
+    @Test
+    public void validateShouldFailWhenDoohSiteAndAppArePresentInRequestAndStrictValidationIsEnabled() {
+        // when
+        target = new RequestValidator(bidderCatalog, bidderParamValidator, metrics, jacksonMapper, 0.01, true);
+        final BidRequest invalidRequest = validBidRequestBuilder()
+                .dooh(Dooh.builder().build())
+                .app(App.builder().build())
+                .site(Site.builder().build())
+                .build();
+        final ValidationResult result = target.validate(invalidRequest, null);
+
+        // then
+        verify(metrics).updateAlertsMetrics(MetricName.general);
+        assertThat(result.getErrors()).hasSize(1)
+                .containsOnly("request.app and request.dooh and request.site are present, "
+                        + "but no more than one of request.site or request.app or request.dooh can be defined");
+    }
+
+    @Test
+    public void validateShouldFailWhenSiteAndAppArePresentInRequestAndStrictValidationIsEnabled() {
+        // when
+        target = new RequestValidator(bidderCatalog, bidderParamValidator, metrics, jacksonMapper, 0.01, true);
+        final BidRequest invalidRequest = validBidRequestBuilder()
+                .app(App.builder().build())
+                .site(Site.builder().build())
+                .build();
+        final ValidationResult result = target.validate(invalidRequest, null);
+
+        // then
+        verify(metrics).updateAlertsMetrics(MetricName.general);
+        assertThat(result.getErrors()).hasSize(1)
+                .containsOnly("request.app and request.site are present, "
+                        + "but no more than one of request.site or request.app or request.dooh can be defined");
+    }
+
+    @Test
+    public void validateShouldFailWhenDoohAndSiteArePresentInRequestAndStrictValidationIsEnabled() {
+        // when
+        target = new RequestValidator(bidderCatalog, bidderParamValidator, metrics, jacksonMapper, 0.01, true);
+        final BidRequest invalidRequest = validBidRequestBuilder()
+                .dooh(Dooh.builder().build())
+                .site(Site.builder().build())
+                .build();
+        final ValidationResult result = target.validate(invalidRequest, null);
+
+        // then
+        verify(metrics).updateAlertsMetrics(MetricName.general);
+        assertThat(result.getErrors()).hasSize(1)
+                .containsOnly("request.dooh and request.site are present, "
+                        + "but no more than one of request.site or request.app or request.dooh can be defined");
+    }
+
+    @Test
+    public void validateShouldFailWhenDoohAndAppArePresentInRequestAndStrictValidationIsEnabled() {
+        // when
+        target = new RequestValidator(bidderCatalog, bidderParamValidator, metrics, jacksonMapper, 0.01, true);
+        final BidRequest invalidRequest = validBidRequestBuilder()
+                .dooh(Dooh.builder().build())
+                .app(App.builder().build())
+                .build();
+        final ValidationResult result = target.validate(invalidRequest, null);
+
+        // then
+        assertThat(result.getErrors()).hasSize(1)
+                .containsOnly("request.app and request.dooh and request.site are present, "
+                        + "but no more than one of request.site or request.app or request.dooh can be defined");
     }
 
     @Test
@@ -1196,7 +1205,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1213,7 +1222,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1230,7 +1239,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1247,7 +1256,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1265,7 +1274,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1283,7 +1292,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1297,7 +1306,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -1311,7 +1320,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1326,7 +1335,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1342,7 +1351,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1363,7 +1372,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1384,7 +1393,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1405,7 +1414,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1428,7 +1437,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1451,7 +1460,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1469,7 +1478,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -1485,7 +1494,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1499,7 +1508,7 @@ public class RequestValidatorTest extends VertxTest {
         given(bidderCatalog.isValidName(eq(RUBICON))).willReturn(false);
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -1522,7 +1531,7 @@ public class RequestValidatorTest extends VertxTest {
                 .willReturn(new LinkedHashSet<>(asList("errorMessage1", "errorMessage2")));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -1551,7 +1560,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -1565,7 +1574,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -1583,7 +1592,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1601,11 +1610,11 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
-                .containsOnly("request.ext.prebid.data.eidpermissions[] can't be null");
+                .containsOnly("request.ext.prebid.data.eidpermissions[i] can't be null");
     }
 
     @Test
@@ -1619,7 +1628,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1638,7 +1647,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1659,7 +1668,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1679,7 +1688,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1703,14 +1712,14 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
     }
 
     @Test
-    public void validateShouldNotReturenValidationErrorWhenBidderIsAterisk() {
+    public void validateShouldNotReturnValidationErrorWhenBidderIsAsterisk() {
         // given
         final BidRequest bidRequest = validBidRequestBuilder()
                 .ext(ExtRequest.of(ExtRequestPrebid.builder()
@@ -1721,7 +1730,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -1739,31 +1748,11 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
                 .containsOnly("Missing required value request.ext.prebid.data.eidPermissions[].source");
-    }
-
-    @Test
-    public void validateShouldReturnValidationMessageWhenEidsPermissionsContainsDuplicatedSources() {
-        // given
-        final BidRequest bidRequest = validBidRequestBuilder()
-                .ext(ExtRequest.of(ExtRequestPrebid.builder()
-                        .data(ExtRequestPrebidData.of(null,
-                                asList(
-                                        ExtRequestPrebidDataEidPermissions.of("source", singletonList("*")),
-                                        ExtRequestPrebidDataEidPermissions.of("source", singletonList("*")))))
-                        .build()))
-                .build();
-
-        // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
-
-        // then
-        assertThat(result.getErrors()).hasSize(1)
-                .containsOnly("Duplicate source source in request.ext.prebid.data.eidpermissions[]");
     }
 
     @Test
@@ -1778,7 +1767,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1797,7 +1786,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1818,7 +1807,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1838,7 +1827,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build()))
                 .build();
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1859,7 +1848,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build()))
                 .build();
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1878,7 +1867,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build()))
                 .build();
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1901,7 +1890,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1929,7 +1918,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1937,27 +1926,31 @@ public class RequestValidatorTest extends VertxTest {
     }
 
     @Test
-    public void validateShouldReturnValidationMessageForInvalidTargeting() {
+    public void validateShouldReturnValidationMessageForInvalidTargetingPrefix() {
         // given
         final ExtPriceGranularity priceGranularity = ExtPriceGranularity.of(1, singletonList(
                 ExtGranularityRange.of(BigDecimal.valueOf(5), BigDecimal.valueOf(0.01))));
+        final String prefix = "1234567890";
+        final int truncateattrchars = 10;
         final BidRequest bidRequest = validBidRequestBuilder()
                 .ext(ExtRequest.of(ExtRequestPrebid.builder()
                         .targeting(ExtRequestTargeting.builder()
                                 .pricegranularity(mapper.valueToTree(priceGranularity))
-                                .includebidderkeys(false)
-                                .includewinners(false)
+                                .includebidderkeys(true)
+                                .includewinners(true)
+                                .truncateattrchars(truncateattrchars)
+                                .prefix(prefix)
                                 .build())
                         .build()))
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
-                .containsOnly("ext.prebid.targeting: At least one of includewinners or includebidderkeys"
-                        + " must be enabled to enable targeting support");
+                .containsOnly("ext.prebid.targeting: decrease prefix length or increase truncateattrchars"
+                        + " by " + (prefix.length() + 11 - truncateattrchars) + " characters");
     }
 
     @Test
@@ -1974,7 +1967,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -1995,7 +1988,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2018,7 +2011,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2040,7 +2033,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2059,7 +2052,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2082,7 +2075,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2100,7 +2093,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2116,7 +2109,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2132,7 +2125,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2149,7 +2142,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2166,7 +2159,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2186,29 +2179,11 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
                 .containsOnly("request.user.eids[0].uids[0] missing required field: \"id\"");
-    }
-
-    @Test
-    public void validateShouldReturnErrorWhenEidSourceIsNotUnique() {
-        // given
-        final BidRequest bidRequest = validBidRequestBuilder()
-                .user(User.builder()
-                        .eids(asList(
-                                Eid.of("source", singletonList(Uid.of("id1", null, null)), null),
-                                Eid.of("source", singletonList(Uid.of("id2", null, null)), null)))
-                        .build())
-                .build();
-
-        // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
-
-        // then
-        assertThat(result.getErrors()).containsExactly("request.user.eids must contain unique sources");
     }
 
     @Test
@@ -2220,7 +2195,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().ext(ext).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2238,7 +2213,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().ext(ext).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2256,7 +2231,7 @@ public class RequestValidatorTest extends VertxTest {
         given(bidderCatalog.isActive("appnexus")).willReturn(false);
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2272,7 +2247,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = validBidRequestBuilder().ext(ext).build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2286,7 +2261,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2299,7 +2274,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = givenBidRequest(identity());
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2312,7 +2287,7 @@ public class RequestValidatorTest extends VertxTest {
         final BidRequest bidRequest = givenBidRequest(nativeCustomizer -> nativeCustomizer.request("broken-request"));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2330,7 +2305,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(500).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2344,7 +2319,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(323));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2361,7 +2336,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(2).contextsubtype(100));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2378,7 +2353,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(2).contextsubtype(11));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2395,7 +2370,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(3).contextsubtype(21));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2412,7 +2387,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(2).contextsubtype(31));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2429,7 +2404,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(1).contextsubtype(12).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2443,7 +2418,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(null).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2457,7 +2432,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.context(1).contextsubtype(null).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2472,7 +2447,7 @@ public class RequestValidatorTest extends VertxTest {
                         .event(323).build())).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2490,7 +2465,7 @@ public class RequestValidatorTest extends VertxTest {
                         .event(1).build())).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2508,7 +2483,7 @@ public class RequestValidatorTest extends VertxTest {
                         .event(1).methods(singletonList(3)).build())).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2526,7 +2501,7 @@ public class RequestValidatorTest extends VertxTest {
                         .event(1).methods(singletonList(2)).build())).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2541,7 +2516,7 @@ public class RequestValidatorTest extends VertxTest {
                         .event(500).methods(singletonList(2)).build())).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2555,7 +2530,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.plcmttype(500).assets(singletonList(Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2569,7 +2544,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.plcmttype(323));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2586,7 +2561,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.assets(emptyList()));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2604,7 +2579,7 @@ public class RequestValidatorTest extends VertxTest {
                         Asset.builder().build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2623,7 +2598,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2642,7 +2617,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2662,7 +2637,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2681,7 +2656,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2700,7 +2675,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2716,7 +2691,7 @@ public class RequestValidatorTest extends VertxTest {
                         .title(TitleObject.builder().len(0).build()).build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2731,7 +2706,7 @@ public class RequestValidatorTest extends VertxTest {
                         .title(TitleObject.builder().len(null).build()).build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2747,7 +2722,7 @@ public class RequestValidatorTest extends VertxTest {
                         .data(DataObject.builder().type(100).build()).build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2766,7 +2741,7 @@ public class RequestValidatorTest extends VertxTest {
                         .data(DataObject.builder().type(500).build()).build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -2781,7 +2756,7 @@ public class RequestValidatorTest extends VertxTest {
                         .video(VideoObject.builder().mimes(emptyList()).build()).build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2803,7 +2778,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2823,7 +2798,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2844,7 +2819,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2865,7 +2840,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2887,7 +2862,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2909,7 +2884,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2931,7 +2906,7 @@ public class RequestValidatorTest extends VertxTest {
                         .build())));
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2947,7 +2922,7 @@ public class RequestValidatorTest extends VertxTest {
                 nativeReqCustomizer.assets(asList(Asset.builder().build(), Asset.builder().build())));
 
         // when
-        requestValidator.validate(bidRequest);
+        target.validate(bidRequest, null);
 
         assertThat(bidRequest.getImp()).hasSize(1)
                 .extracting(Imp::getXNative).doesNotContainNull()
@@ -2967,7 +2942,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -2983,7 +2958,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -3002,7 +2977,7 @@ public class RequestValidatorTest extends VertxTest {
                                 .build()))
                 .build();
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -3024,7 +2999,7 @@ public class RequestValidatorTest extends VertxTest {
                                 .build()))
                 .build();
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -3046,7 +3021,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -3067,7 +3042,7 @@ public class RequestValidatorTest extends VertxTest {
                                 .build()))
                 .build();
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -3091,7 +3066,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -3115,7 +3090,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).isEmpty();
@@ -3136,7 +3111,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         verify(bidderCatalog).isValidName(rubiconAlias);
@@ -3157,7 +3132,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors())
@@ -3178,7 +3153,7 @@ public class RequestValidatorTest extends VertxTest {
                 .build();
 
         // when
-        final ValidationResult result = requestValidator.validate(bidRequest);
+        final ValidationResult result = target.validate(bidRequest, null);
 
         // then
         assertThat(result.getErrors()).hasSize(1)
@@ -3225,7 +3200,7 @@ public class RequestValidatorTest extends VertxTest {
 
     private static BidRequest overwriteBannerFormatInFirstImp(
             BidRequest bidRequest, UnaryOperator<FormatBuilder> formatModifier) {
-        final Banner banner = bidRequest.getImp().get(0).getBanner().toBuilder()
+        final Banner banner = bidRequest.getImp().getFirst().getBanner().toBuilder()
                 .format(singletonList(formatModifier.apply(Format.builder()).build())).build();
 
         return bidRequest.toBuilder().imp(singletonList(validImpBuilder().banner(banner).build())).build();
@@ -3233,7 +3208,7 @@ public class RequestValidatorTest extends VertxTest {
 
     private static BidRequest overwritePmpFirstDealInFirstImp(
             BidRequest bidRequest, UnaryOperator<DealBuilder> dealModifier) {
-        final Pmp pmp = bidRequest.getImp().get(0).getPmp().toBuilder()
+        final Pmp pmp = bidRequest.getImp().getFirst().getPmp().toBuilder()
                 .deals(singletonList(dealModifier.apply(dealModifier.apply(Deal.builder())).build())).build();
 
         return bidRequest.toBuilder().imp(singletonList(validImpBuilder().pmp(pmp).build())).build();
